[package]
name = "status-panel"
version = "0.1.2"
edition = "2021"

[features]
default = ["docker"]
docker = ["bollard"]
minimal = []

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
futures-util = "0.3"
tera = "1"
tower-http = { version = "0.6", features = ["fs"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
subtle = "2"
# System metrics
sysinfo = "0.30"
# Docker client for Rust (SSL disabled to avoid OpenSSL dependency on musl)
bollard = { version = "0.19", optional = true, default-features = false, features = ["chrono"] }
# Daemonization
daemonize = "0.5"
# Load environment variables from .env
dotenvy = "0.15"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[[bin]]
name = "status"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
tokio-test = "0.4"
tempfile = "3"
mockito = "1"
tower = "0.5"
http-body-util = "0.1"
hyper = "1"
